selfhost/tests/neg/gtypemismatch.ail
// EXPECT: expects Box_i64, got Box_str
// Generic structs monomorphize to distinct nominal types (Box_i64 ≠ Box_str), so
// passing a Box<str> where a Box<i64> is required is a type error at the call site.
st Box<T> { val: T }
fn unbox(b: Box<i64>) -> i64 { b.val }
println(unbox(Box("oops")))
